<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3A015C"
    tools:context=".activites.GameActivity">

    <FrameLayout
        android:id="@+id/make_move"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="#35012C"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:text="@string/move_string"
            android:textColor="#ffffff"/>
    </FrameLayout>


    <FrameLayout
        android:id="@+id/see_deck"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_below="@+id/save_game"
        android:layout_marginTop="50dp"
        android:layout_alignParentEnd="true"
        android:background="#35012C"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:text="@string/deck_string"
            android:textColor="#ffffff"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/turn_log"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_below="@+id/ask_help"
        android:layout_marginTop="50dp"
        android:layout_alignParentEnd="true"
        android:background="#35012C"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:text="@string/log_string"
            android:textColor="#ffffff"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/ask_help"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:background="#35012C"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:textAlignment="center"
            android:text="@string/help_string"
            android:textColor="#ffffff"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/save_game"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="#35012C"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/save_game_string"
            android:textAlignment="center"
            android:textColor="#ffffff"/>
    </FrameLayout>


    <FrameLayout
        android:id="@+id/human_pile"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="280dp"
        android:background="#35012C"
        android:visibility="visible"
        android:elevation="1dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/pile_string"
            android:textAlignment="center"
            android:textColor="#ffffff"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/computer_pile"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginLeft="280dp"
        android:background="#35012C"
        android:visibility="visible"
        android:elevation="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/pile_string"
            android:textAlignment="center"
            android:textColor="#ffffff"/>

    </FrameLayout>

    <TextView
        android:id="@+id/human_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="370dp"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/current_turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="490dp"
        android:textColor="#ffffff"/>


    <TextView
        android:id="@+id/computer_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="370dp"
        android:textColor="#ffffff"/>


    <TextView
        android:id="@+id/round_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="490dp"
        android:textColor="#ffffff"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/human_hand"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="300dp"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@id/save_game"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/computer_hand"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@id/ask_help"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="100dp"
        android:layout_toLeftOf="@id/save_game"
        android:scrollbars="horizontal"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/table_builds"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="180dp"
        android:scrollbars="horizontal"/>

</RelativeLayout>
